build(drone): update drone config

--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,7 @@ steps:
   - name: build
     image: golang:alpine
     commands:
+      - apk add --no-cache --no-progress
       - make build
 
   - name: semantic-release
