--- a/.drone.yml
+++ b/.drone.yml
@@ -17,12 +17,10 @@ steps:
   - name: semantic-release
     image: cenk1cenk2/drone-semantic-release
     settings:
-      semantic_release: true
       add_modules:
         - "@google/semantic-release-replace-plugin"
       mode: release
       update_readme_toc: true
-      readme_location: README.md
       git_method: gh
       git_user_email:
         from_secret: github_username
@@ -33,7 +31,7 @@ steps:
         from_secret: docker_username
       docker_password:
         from_secret: docker_password
-      docker_repo: cenk1cenk2/softether-vpnsrv
+      docker_repo: cenk1cenk2/do-dyndns
     when:
       event:
         - push
