--- a/.drone.yml
+++ b/.drone.yml
@@ -48,6 +48,6 @@ steps:
         from_secret: docker_password
     when:
       event:
-        - push
+        - tag
       branch:
         - master
