--- a/.drone.yml
+++ b/.drone.yml
@@ -40,6 +40,9 @@ steps:
 
   - name: publish
     image: plugins/docker
+    commands:
+      - ls
+      - cat .tags
     settings:
       repo: cenk1cenk2/do-dyndns
       username:
