fix: build process

--- a/.drone.yml
+++ b/.drone.yml
@@ -45,6 +45,10 @@ steps:
 
   - name: publish
     image: plugins/docker
+    commands:
+      - ls
+      - pwd
+      - cat .tags
     settings:
       repo: cenk1cenk2/do-dyndns
       username:
