--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,8 @@ steps:
 
   - name: semantic-release
     image: cenk1cenk2/drone-semantic-release
+    depends_on:
+      - build
     settings:
       add_modules:
         - "@google/semantic-release-replace-plugin"
@@ -36,20 +38,6 @@ steps:
       docker_password:
         from_secret: docker_password
       docker_repo: cenk1cenk2/do-dyndns
-    when:
-      event:
-        - push
-      branch:
-        - master
-
-  - name: publish
-    image: plugins/docker
-    settings:
-      repo: cenk1cenk2/do-dyndns
-      username:
-        from_secret: docker_username
-      password:
-        from_secret: docker_password
     when:
       event:
         - push
