--- a/.drone.yml
+++ b/.drone.yml
@@ -54,7 +54,6 @@ steps:
         from_secret: docker_password
       build_args:
         - BINARY_NAME=linux-x64
-      auto_tag: true
     depends_on:
       - semantic-release
     when:
@@ -73,7 +72,6 @@ steps:
         from_secret: docker_password
       build_args:
         - BINARY_NAME=linux-arm
-      auto_tag: true
       auto_tag_suffix: linux-arm
     depends_on:
       - semantic-release
@@ -93,7 +91,6 @@ steps:
         from_secret: docker_password
       build_args:
         - BINARY_NAME=linux-arm64
-      auto_tag: true
       auto_tag_suffix: arm64
     depends_on:
       - semantic-release
@@ -103,10 +100,9 @@ steps:
       branch:
         - master
 
-  - name: publish-manifest
-    image: plugins/manifest:1.2
+  - name: manifest
+    image: plugins/manifest
     settings:
-      auto_tag: true
       ignore_missing: true
       spec: .docker-manifest.tmpl
       username:
