--- a/.drone.yml
+++ b/.drone.yml
@@ -72,7 +72,7 @@ steps:
         from_secret: docker_password
       build_args:
         - BINARY_NAME=linux-arm
-      auto_tag_suffix: arm
+      default_suffix: arm
     depends_on:
       - semantic-release
     when:
@@ -91,7 +91,7 @@ steps:
         from_secret: docker_password
       build_args:
         - BINARY_NAME=linux-arm64
-      auto_tag_suffix: arm64
+      default_suffix: arm64
     depends_on:
       - semantic-release
     when:
