--- a/.drone.yml
+++ b/.drone.yml
@@ -53,6 +53,7 @@ steps:
       password:
         from_secret: docker_password
       build_args:
+        - IMAGE_NAME=alpine:latest
         - BINARY_NAME=linux-x64
     depends_on:
       - semantic-release
@@ -71,6 +72,7 @@ steps:
       password:
         from_secret: docker_password
       build_args:
+        - IMAGE_NAME=arm32v7/alpine
         - BINARY_NAME=linux-arm
       tags:
         - arm
@@ -91,6 +93,7 @@ steps:
       password:
         from_secret: docker_password
       build_args:
+        - IMAGE_NAME=arm64v8/alpine
         - BINARY_NAME=linux-arm64
       tags:
         - arm64
