--- a/.drone.yml
+++ b/.drone.yml
@@ -46,7 +46,7 @@ steps:
 
   - name: buildx
     image: docker/docker
-    command: ash -c "docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD && docker buildx create --name buildx --use && docker buildx inspect --bootstrap && docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push ."
+    command: 'ash -c "docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD && docker buildx create --name buildx --use && docker buildx inspect --bootstrap && docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push ."'
     environment:
       DOCKER_USERNAME:
         from_secret: docker_username
