--- a/.drone.yml
+++ b/.drone.yml
@@ -47,15 +47,18 @@ steps:
   - name: buildx
     image: docker
     commands:
+      - docker version
       - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - docker buildx create --name buildx --use
+      - docker buildx create --name builder --use
       - docker buildx inspect --bootstrap
-      - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push ."'
+      - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push .
     environment:
       DOCKER_USERNAME:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - semantic-release
     when:
