--- a/.drone.yml
+++ b/.drone.yml
@@ -58,7 +58,7 @@ steps:
       DOCKER_PASSWORD:
         from_secret: docker_password
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - '/var/run/docker.sock:/var/run/docker.sock'
     depends_on:
       - semantic-release
     when:
