--- a/.drone.yml
+++ b/.drone.yml
@@ -44,19 +44,23 @@ steps:
       branch:
         - master
 
-  - name: buildx
-    image: docker
+  - name: docker-build
+    image: plugins/docker
+    settings:
+      repo: cenk1cenk2/do-dyndns
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+      build_args:
+        - IMAGE_NAME=alpine:latest
+        - BINARY_NAME=linux-x64
     commands:
       - docker version
-      - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - docker login -u $PLUGIN_USERNAME -p $PLUGIN_PASSWORD
       - docker buildx create --name builder --use
       - docker buildx inspect --bootstrap
       - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push .
-    environment:
-      DOCKER_USERNAME:
-        from_secret: docker_username
-      DOCKER_PASSWORD:
-        from_secret: docker_password
     depends_on:
       - semantic-release
     when:
@@ -65,26 +69,6 @@ steps:
       branch:
         - master
 
-  #
-  # - name: publish-amd64
-  #   image: plugins/docker
-  #   settings:
-  #     repo: cenk1cenk2/do-dyndns
-  #     username:
-  #       from_secret: docker_username
-  #     password:
-  #       from_secret: docker_password
-  #     build_args:
-  #       - IMAGE_NAME=alpine:latest
-  #       - BINARY_NAME=linux-x64
-  #   depends_on:
-  #     - semantic-release
-  #   when:
-  #     event:
-  #       - push
-  #     branch:
-  #       - master
-  #
   # - name: publish-arm
   #   image: plugins/docker
   #   settings:
