--- a/.drone.yml
+++ b/.drone.yml
@@ -53,7 +53,11 @@ steps:
       - sleep 5
       - docker version
       - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - docker buildx create --name builder --use
+      - export DOCKER_BUILDKIT=1
+      - docker build --platform=local -o . git://github.com/docker/buildx
+      - mkdir -p ~/.docker/cli-plugins
+      - mv buildx ~/.docker/cli-plugins/docker-buildx
+      - docker buildx create --use --name builder
       - docker buildx inspect --bootstrap
       - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push .
     environment:
