--- a/.drone.yml
+++ b/.drone.yml
@@ -50,14 +50,15 @@ steps:
       - name: dockersock
         path: /var/run
     commands:
-      - sleep 5
       - docker version
       - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - export DOCKER_BUILDKIT=1
-      - docker build --platform=local -o . git://github.com/docker/buildx
+      - docker buildx  - apk add curl
       - mkdir -p ~/.docker/cli-plugins
-      - mv buildx ~/.docker/cli-plugins/docker-buildx
-      - docker buildx create --use --name builder
+      - curl -sSLo ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/$BUILDX_VERSION/buildx-$BUILDX_VERSION.linux-amd64
+      - chmod +x ~/.docker/cli-plugins/docker-buildx
+      - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+      - docker info
+      - docker info create --use --name builder
       - docker buildx inspect --bootstrap
       - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push .
     environment:
@@ -65,6 +66,7 @@ steps:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
+      BUILDX_VERSION: 0.5.1
     depends_on:
       - semantic-release
     when:
@@ -76,6 +78,7 @@ steps:
 services:
   - name: docker
     image: docker:dind
+    command: --experimental
     privileged: true
     volumes:
       - name: dockersock
