--- a/.drone.yml
+++ b/.drone.yml
@@ -52,13 +52,13 @@ steps:
     commands:
       - docker version
       - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - docker buildx  - apk add curl
+      - apk add curl --no-cache --no-progress
       - mkdir -p ~/.docker/cli-plugins
       - curl -sSLo ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/$BUILDX_VERSION/buildx-$BUILDX_VERSION.linux-amd64
       - chmod +x ~/.docker/cli-plugins/docker-buildx
       - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - docker info
-      - docker info create --use --name builder
+      - docker buildx create --use --name builder
       - docker buildx inspect --bootstrap
       - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push .
     environment:
