--- a/.drone.yml
+++ b/.drone.yml
@@ -66,7 +66,7 @@ steps:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
-      BUILDX_VERSION: 0.5.1
+      BUILDX_VERSION: v0.5.1
     depends_on:
       - semantic-release
     when:
