--- a/.drone.yml
+++ b/.drone.yml
@@ -57,16 +57,16 @@ steps:
       - curl -sSLo ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/$BUILDX_VERSION/buildx-$BUILDX_VERSION.linux-amd64
       - chmod +x ~/.docker/cli-plugins/docker-buildx
       - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-      - docker info
+      - docker buildx help
       - docker buildx create --use --name builder
       - docker buildx inspect --bootstrap
       - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push .
     environment:
+      BUILDX_VERSION: v0.5.1
       DOCKER_USERNAME:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
-      BUILDX_VERSION: v0.5.1
     depends_on:
       - semantic-release
     when:
