--- a/.drone.yml
+++ b/.drone.yml
@@ -60,13 +60,14 @@ steps:
       - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - docker buildx create --use --name builder
       - docker buildx inspect --bootstrap
-      - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t cenk1cenk2/do-dyndns:latest --push .
+      - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t $DOCKER_IMAGE_TAG --push .
     environment:
       BUILDX_VERSION: v0.5.1
       DOCKER_USERNAME:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
+      DOCKER_IMAGE_TAG: cenk1cenk2/do-dyndns:latest
     depends_on:
       - semantic-release
     when:
