--- a/.drone.yml
+++ b/.drone.yml
@@ -65,7 +65,7 @@ steps:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
-      DOCKER_IMAGE_TAG: '-t cenk1cenk2/do-dyndns:latest -t cenk1cenk2/do-dyndns:${DRONE_TAG}'
+      DOCKER_IMAGE_TAG: -t cenk1cenk2/do-dyndns:latest
     depends_on:
       - semantic-release
     when:
@@ -81,6 +81,9 @@ services:
     volumes:
       - name: dockersock
         path: /var/run
+    when:
+      event:
+        - tag
 
 volumes:
   - name: dockersock
