--- a/.drone.yml
+++ b/.drone.yml
@@ -41,7 +41,7 @@ steps:
       event:
         - tag        
 
-  - name: docker-build
+  - name: publish-buildx
     image: docker:dind
     volumes:
       - name: dockersock
@@ -63,7 +63,7 @@ steps:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
-      DOCKER_IMAGE_TAG: -t cenk1cenk2/do-dyndns:latest
+      DOCKER_IMAGE_TAG: -t cenk1cenk2/do-dyndns:latest -t $DRONE_TAG
     depends_on:
       - build
     when:
