--- a/.drone.yml
+++ b/.drone.yml
@@ -63,7 +63,7 @@ steps:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
-      DOCKER_IMAGE_TAG: -t cenk1cenk2/do-dyndns:latest -t $DRONE_TAG
+      DOCKER_IMAGE_TAG: -t cenk1cenk2/do-dyndns:latest -t cenk1cenk2/do-dyndns:$DRONE_TAG
     depends_on:
       - build
     when:
