--- a/.drone.yml
+++ b/.drone.yml
@@ -3,14 +3,24 @@ kind: pipeline
 trigger:
   event:
     - push
-    - tag
-    - cron
   branch:
     - master
 
 steps:
+  - name: build
+    image: golang:alpine
+    commands:
+      - apk add --no-cache --no-progress make
+      - make install
+      - make -j3 build
+    when:
+      event:
+        - push
+        
   - name: semantic-release
     image: cenk1cenk2/drone-semantic-release
+    depends_on:
+      - build
     settings:
       add_modules:
         - '@google/semantic-release-replace-plugin'
@@ -30,25 +40,18 @@ steps:
     when:
       event:
         - push
-        
-  - name: build
-    image: golang:alpine
-    commands:
-      - apk add --no-cache --no-progress make
-      - make install
-      - make -j3 build
-    when:
-      event:
-        - tag        
 
   - name: publish-buildx
     image: docker:dind
+    depends_on:
+      - build
+      - semantic-release
     volumes:
       - name: dockersock
         path: /var/run
     commands:
       - docker version
-      - docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+      - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - apk add curl --no-cache --no-progress
       - mkdir -p ~/.docker/cli-plugins
       - curl -sSLo ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/$BUILDX_VERSION/buildx-$BUILDX_VERSION.linux-amd64
@@ -63,12 +66,10 @@ steps:
         from_secret: docker_username
       DOCKER_PASSWORD:
         from_secret: docker_password
-      DOCKER_IMAGE_TAG: '-t cenk1cenk2/do-dyndns:latest -t cenk1cenk2/do-dyndns:${DRONE_TAG}'
-    depends_on:
-      - build
+      DOCKER_IMAGE_TAG: -t cenk1cenk2/do-dyndns:latest
     when:
       event:
-        - tag
+        - push
 
 services:
   - name: docker
