--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
     when:
       event:
         - push
-        
+
   - name: semantic-release
     image: cenk1cenk2/drone-semantic-release
     depends_on:
@@ -59,7 +59,7 @@ steps:
       - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - docker buildx create --use --name builder
       - docker buildx inspect --bootstrap
-      - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 $DOCKER_IMAGE_TAG --push .
+      - docker buildx build --pull --push --platform linux/amd64,linux/arm64,linux/arm/v7 -t $DOCKER_IMAGE_TAG .
     environment:
       BUILDX_VERSION: v0.5.1
       DOCKER_USERNAME:
