--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 
 variables:
   DOCKERFILE_CONTEXT: .
-  IMAGE_NAME: cenk1cenk2/do-dyndns
+  DOCKER_IMAGE_NAME: cenk1cenk2/do-dyndns
   IMAGE_TAGS: edge
   DOCKER_USE_BUILDX: 'true'
   DOCKER_BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
@@ -26,7 +26,7 @@ include:
     ref: main
 
   - project: devops/pipes
-    file: /templates/docker-build.gitlab-ci.yml
+    file: /templates/docker-build-dockerhub.gitlab-ci.yml
     ref: main
 
   - project: devops/pipes
