perf: change the building method move to gitlab and the logger
BREAKING CHANGE: can break previous versions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,3 +33,10 @@ include:
   - project: devops/pipes
     file: /templates/update-docker-hub-readme.gitlab-ci.yml
     ref: main
+
+build-docker-image:
+  only:
+    refs:
+      - master
+    exists:
+      - .tags
