--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
 variables:
   DOCKERFILE_CONTEXT: .
   DOCKER_IMAGE_NAME: cenk1cenk2/do-dyndns
-  DOCKER_USE_BUILDX: 'true'
+  DOCKER_USE_BUILDX: "true"
   DOCKER_BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
   README_DESCRIPTION: |
     Use dynamic DNS through Digital Ocean API for your domains.
@@ -36,6 +36,5 @@ include:
 
 build-docker-image:
   rules:
-    - if: $CI_COMMIT_BRANCH == "master"
     - exists:
         - .tags
