--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ variables:
   DOCKER_IMAGE_NAME: cenk1cenk2/do-dyndns
   DOCKER_USE_BUILDX: "true"
   DOCKER_BUILDX_PLATFORMS: linux/amd64,linux/arm64,linux/arm/v7
+  TAGS_FILE: ".tags"
   README_DESCRIPTION: |
     Use dynamic DNS through Digital Ocean API for your domains.
 
@@ -33,3 +34,8 @@ include:
   - project: devops/pipes
     file: /templates/update-docker-hub-readme.gitlab-ci.yml
     ref: main
+
+build-docker-image:
+  only:
+    refs:
+      - master
