--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,11 @@ include:
     file: /templates/update-docker-hub-readme.gitlab-ci.yml
     ref: main
 
+build:
+  artifacts:
+    paths:
+      - version/v.go
+
 build-docker-image:
   only:
     refs:
